turtleart.lessons.turtleart.Main.Square.scala.error
Source:3: error: '(' expected but identifier found.
	for k <-0 to 1 {
            ^Source:9: error: illegal start of simple expression
}
^